--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,55 @@ body {
 .site-title-sub {
   font-size: 3.2rem;
   margin-bottom: 80px;
+  letter-spacing: 1px;
 }
 .site-title {
   font-size: 6.4rem;
   margin-bottom: 80px;
+  letter-spacing: 2px;
+  position: relative;
+}
+.site-title::before,
+.site-title::after {
+  content: '';
+  display: inline-block;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid #333;
 }
 .site-description {
   font-size: 2.5rem;
+  letter-spacing: 1px;
+}
+.buttons {
+  margin-top: 80px;
+}
+.button {
+  display: inline-block;
+  padding: 20px;
+  border: 1px solid #333;
+  border-radius: 10px;
+  background-color: #d5e6dd;
+  margin: 30px 60px;
+  width: 200px;
+  text-decoration: none;
+  font-size: 2.3rem;
+  color: #355242;
+}
+.button:hover {
+  opacity: 0.8;
+  box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.7);
+}
+.arrow {
+  margin: 80px;
+  width: 100px;
+  height: 80px;
+  font-size: 6rem;
+  animation: Flash1 1s infinite;
+}
+@keyframes Flash1 {
+  50%{
+    opacity: 0;
+  }
 }
