--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,21 @@ body {
   font-size: 6.4rem;
   margin-bottom: 80px;
   letter-spacing: 2px;
+  display: inline-block;
   position: relative;
 }
 .site-title::before,
 .site-title::after {
   content: '';
+  position: absolute;
   display: inline-block;
   right: 0;
   bottom: 0;
   left: 0;
   border-bottom: 1px solid #333;
+}
+.site-title::after {
+  bottom: -10px;
 }
 .site-description {
   font-size: 2.5rem;
@@ -74,3 +79,37 @@ body {
     opacity: 0;
   }
 }
+/* ここまでheader */
+.about {
+  background-color: #333;
+  color: #fff;
+  width: 100%;
+}
+.heading {
+  padding: 80px;
+  font-size: 3.3rem;
+  letter-spacing: 2px;
+}
+.heading::before,
+.heading::after {
+  content: '';
+  display: inline-block;
+  height: 2px;
+  width: 140px;
+  margin: 0 20px;
+  vertical-align: middle;
+  background-color: #fff;
+}
+.about-text {
+  font-size: 1.6rem;
+  line-height: 2;
+  letter-spacing: 2px;
+  padding-bottom: 40px;
+}
+.about-text:last-child {
+  padding-bottom: 80px;
+}
+.arrow:nth-of-type(even) {
+  color: #fff;
+}
+/* ここまでabout */
