--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,17 @@ body {
   color: #fff;
   width: 100%;
 }
+.profile-image {
+  width: 100px;
+  height: 100px;
+  transform: rotate(90deg);
+  margin-bottom: 50px;
+  border-radius: 50%;
+  transition: box-shadow 0.4s;
+}
+.profile-image:hover {
+  box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.7);
+}
 .heading {
   padding: 80px;
   font-size: 3.3rem;
@@ -113,3 +124,85 @@ body {
   color: #fff;
 }
 /* ここまでabout */
+.works {
+  width: 100%;
+}
+.heading-even::before,
+.heading-even::after {
+  content: '';
+  display: inline-block;
+  height: 2px;
+  width: 140px;
+  margin: 0 20px;
+  vertical-align: middle;
+  background-color: #333;
+}
+.announce {
+  letter-spacing: 2px;
+  padding-bottom: 50px;
+}
+.works-contents {
+  width: 70%;
+  margin: 0 auto 60px;
+  display: table;
+  table-layout: fixed;
+}
+.work-box {
+  display: table-cell;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-bottom: 50px;
+}
+.work-link {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+.work-link:hover {
+  box-shadow: 0 0 6px -1px rgba(0, 0, 0, 0.3);
+  opacity: 0.8;
+}
+.work-link::after {
+  content: 'Coming soon';
+  opacity: 0;
+  position: absolute;
+  display: block;
+  top: -150%;
+  left: 33%;
+  padding: 8px;
+  border: solid 3px #f59342;
+  font-size: 2.2rem;
+  font-weight: bold;
+  border-radius: 10%;
+  color: #f59342;
+  background-color: #333;
+  transition: all 1s ease-in-out;
+}
+.work-link:hover::after {
+  opacity: 1;
+  top: 40%
+}
+.work-box:hover .work-image {
+  transform: scale(1.1);
+}
+.work-image {
+  border-radius: 10px;
+  width: 100%;
+  display: block;
+  transition: transform 0.3s;
+  transform-origin:left bottom;
+}
+/* .work-image:hover {
+  transform: scale(1.2);
+} */
+/* .work-box::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 427px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius:  10px;
+} */
